--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@ letter-spacing: 0.02em;}
 </head>
     <body>
         <header>
-    <img src="markus-winkler-y6UhsOWDiVs-unsplash.jpg" 
+    <img src="logo.jpg" 
     alt="Logo Gender-Automat"
-    style= "max-width: 100%; height:auto; border-radius:8px; float: left; margin-right: 10px;">
+    style= "height: 160px; width: auto; border-radius:8px; float: left; margin-right: 20px;">
     <h1 style="float: left; margin: 10px 0;">Gender-Automat</h1>
     <div style="float:right; text-align: right;">
         <form style="display: inline;">
@@ -212,3 +212,4 @@ Diese Webseite soll Texte automatisch in eine gendergerechte Form umwandeln!
     </body>
 </html>
         
+
